# mogak-us

./: .aider.conf.yml  .aider.config.yml  .cursorrules  .editorconfig  .eslintrc.js  .gitignore  .prettierrc  ARCHITECTURE.md  Dockerfile  README.md  components.json  docker-compose.test.yml  docker-compose.yml  manage.py  package.json  pyproject.toml  pytest.ini  requirements.txt  tailwind.config.cjs  tsconfig.json  vite.config.js  vite.config.ts
.devcontainer/: devcontainer.json
main/: admin.py  api.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_meetup_attendance_mogakuser_meetups.py  0003_meetup_owner.py  0004_workspace_meetup_workspace_workspacemembership_and_more.py
main/templates/accounts/: login.html
main/tests/: test_models.py
mogak_us/: asgi.py  settings.py  urls.py  wsgi.py
mogak_us/settings/: __init__.py  base.py  development.py  production.py  test.py
mogak_us/templates/inertia/: base.html
static/src/js/: main.js
static/src/js/Components/: Calendar.vue  MeetupItem.vue
static/src/js/Components/prelude/: Layout.vue
static/src/js/Pages/Dashboard/: MeetupDetail.vue  MeetupList.vue  WorkspaceDetail.vue  WorkspaceMembers.vue  Workspaces.vue
static/src/js/components/: WorkspaceItem.vue
static/src/js/layouts/: Layout.vue  WorkspaceLayout.vue  WorkspaceSidebar.vue
tests/functional/: test_meetup_authentication.py
